--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -532,12 +532,16 @@
                 }
             }
 
-            // Auto-dismiss alerts after 5 seconds
+            // Auto-dismiss alerts after 5 seconds (except clinical history warnings)
             setTimeout(function() {
                 var alerts = document.querySelectorAll('.alert');
                 alerts.forEach(function(alert) {
-                    var bsAlert = new bootstrap.Alert(alert);
-                    bsAlert.close();
+                    // Skip clinical history warnings - they should be persistent
+                    if (!alert.classList.contains('clinical-history-warning') && 
+                        alert.id !== 'clinical-history-permanent-warning') {
+                        var bsAlert = new bootstrap.Alert(alert);
+                        bsAlert.close();
+                    }
                 });
             }, 5000);
 
